@@ -81,6 +81,7 @@ Usage: apu-config [OPTION]
 
 Known values for OPTION are:
   --prefix[=DIR]    change prefix to DIR
+  --bindir          print location where binaries are installed
   --includes        print include information
   --ldflags         print linker flags
   --libs            print library information
@@ -143,6 +144,10 @@ while test $# -gt 0; do
     ;;
     --prefix)
     echo $prefix
+    exit 0
+    ;;
+    --bindir)
+    echo $bindir
     exit 0
     ;;
     --libs)
