@@ -1,5 +1,7 @@
 Changes with APR-util 0.9.2
 
+  *) Add --bindir option to apu-config.  [Justin Erenkrantz]
+
 Changes with APR-util 0.9.1
 
   *) Add versioning infrastructure.
